src/objects/TR_EmployeeTrainingEventJO__c.object
<CustomObject>
    <fields>
        <fullName>Attendance__c</fullName>
        <label>Attendance</label>
        <picklist>
            <picklistValues>
                <fullName>Fully Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Absent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Attendance Comments</description>
        <label>Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TMNAccess__c</fullName>
        <label>TMN Access</label>
        <referenceTo>TMN_User__c</referenceTo>
        <relationshipLabel>TR_EmployeeTrainingEventJO</relationshipLabel>
        <relationshipName>EmployeeTrainingEventJO</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TrainingEvent__c</fullName>
        <label>TR_Training Event</label>
        <referenceTo>TR_Training_Event__c</referenceTo>
        <relationshipLabel>TR_EmployeeTrainingEventJO</relationshipLabel>
        <relationshipName>TR_EmployeeTrainingEventJO</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>TR_EmployeeTrainingEventJO</label>
    <nameField>
        <label>EmployeeTrainingEventJO Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TR_EmployeeTrainingEventJO</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>